quarkus-gps/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-echo
  labels:
    app: quarkus-echo
  annotations:
    prometheus.io/scrape_port: '8080'
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/q/metrics'
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: quarkus-echo
  type: ClusterIP
  sessionAffinity: None
